Added return to recipes page

--- a/recipes/hamburguer.html
+++ b/recipes/hamburguer.html
@@ -34,5 +34,6 @@
         <li>Mix together ground beef, onion, cheese, onion soup mix, egg, garlic, garlic powder, soy sauce, Worcestershire sauce, parsley, basil, oregano, rosemary, salt, and pepper in a large bowl. Use your hands to form 4 patties.</li>
         <li>Cook patties on the preheated grill until well-done, about 5 minutes per side.</li>
     </ol>
+    <a href="../index.html">Return</a>
 </body>
 </html>
