--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Odin First Project</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="header">Odin Recipes</h1>
     <p><a href="recipes/lasagna.html">Lasagna recipe</a></p>
     <p><a href="recipes/hamburguer.html">Hamburguer</a></p>
 </body>
