--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -56,6 +56,7 @@
             <li>¾ pound mozzarella cheese, sliced </li>
             <li>¾ cup grated Parmesan cheese </li>
         </ul>
+    <a href="../index.html">Return</a>
 
     
 </body>
